# rp-assist

./: .env.example  .gitignore  Makefile  README.md  config.example.toml  docker-compose.yml  rpg-assistant-specification.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: chat.py  config.py  documents.py  images.py
backend/app/db/: __init__.py  schema.sql
backend/app/models/: chat.py  config.py  document.py
backend/app/services/: document_processor.py  embedding_service.py  image_service.py  llm_service.py  vector_store.py
backend/app/utils/: __init__.py  config_loader.py  logger.py
frontend/: .dockerignore  Dockerfile  package.json
frontend/src/: app.html
frontend/src/routes/: +page.svelte
notes/: 2025-12-10-B.md  2025-12-10.md
